@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150712"
-#define public MagickPackageReleaseDate "snapshot-20150712"
+#define public MagickPackageVersionAddendum ".020150714"
+#define public MagickPackageReleaseDate "snapshot-20150714"
